# satisfaculty

./: .gitignore  README.md  example_lexicographic.py  pyproject.toml
.github/workflows/: docs.yml
data/: courses.csv  time_slots.csv
docs/: OBJECTIVES_GUIDE.md  conf.py  formulation.md  index.md  objectives_guide.md
example/: courses.csv  example.py  rooms.csv
satisfaculty/: __init__.py  constraints.py  objective_base.py  objectives.py  scheduler.py  utils.py  visualize_schedule.py
src/: scheduler.py  visualize_schedule.py
tests/: test_filter_keys.py
